--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -16,6 +16,8 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>graphql-kotlin-spring-boot</module>
+        <module>dgs-spring-boot</module>
         <module>graphql-spring-boot</module>
     </modules>
 </project>
