--- a/examples/graphql-spring-boot/src/main/resources/application.yaml
+++ b/examples/graphql-spring-boot/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 org :
   neo4j :
     driver :
-      uri : neo4j+s://c1463b25.databases.neo4j.io
+      uri : neo4j://localhost:7687
       authentication :
         username : neo4j
-        password : _ILpJujYUrlGQDc-aJiASNqhidUgseJFhPmyl1-UOEE
+        password : movies
       config :
-        encrypted : true
+        encrypted : false
 database : neo4j
 spring :
   graphql :
