change database info in GraphqlSpringBootApplication.java and run main to update everything and populate database

--- a/examples/graphql-spring-boot/pom.xml
+++ b/examples/graphql-spring-boot/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.30</version>
+        </dependency>
         <!-- spring dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -88,6 +93,26 @@
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.jimblackler</groupId>
+            <artifactId>jsongenerator</artifactId>
+            <version>0.4.6</version>
+        </dependency>
     </dependencies>
 
 
@@ -117,6 +142,10 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
     <pluginRepositories>
