--- a/examples/graphql-spring-boot/src/main/resources/application.yaml
+++ b/examples/graphql-spring-boot/src/main/resources/application.yaml
@@ -2,11 +2,17 @@ org:
   neo4j:
     driver:
       uri: neo4j://localhost
-      authentication: {username: neo4j, password: movies}
-      config: {encrypted: false}
+      authentication:
+        username: neo4j
+        password: movies
+      config:
+        encrypted: false
 database: neo4j
+dataPath: C:/Users/rebal/Documents/Pipeline/pipelines-array.json
 spring:
   graphql:
     schema:
-      printer: {enabled: true}
-    graphiql: {enabled: true}
+      printer:
+        enabled: true
+    graphiql:
+      enabled: true
